--- a/palindrome/index.html
+++ b/palindrome/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <div id="middle-this-thing">
       <p>Enter in text to check for a palindrome:</p>
-      <input id="text-input"> <button id="check-btn" type="button">Check</button>
-      <p id="result"></span>
+      <input id="text-input" />
+      <button id="check-btn" type="button">Check</button>
+      <p id="result"></p>
     </div>
+    <script src="script.js"></script>
   </body>
-  <script src="script.js"></script>
 </html>
