--- a/palindrome/index.html
+++ b/palindrome/index.html
@@ -5,6 +5,7 @@
   </head>
   <body>
     <div id="middle-this-thing">
+      <h1>Palindrome checker</h1>
       <p>Enter in text to check for a palindrome:</p>
       <input id="text-input" />
       <button id="check-btn" type="button">Check</button>
