--- a/us-phone-validator/index.html
+++ b/us-phone-validator/index.html
@@ -9,7 +9,7 @@
         <h1>Telephone Number Validator</h1>
         <label for="user-input">Enter a Phone Number:</label>
         <input maxlength="20" type="text" id="user-input" value="" />
-        <div id="results-div"></div>
+        <p id="results-div"></p>
         <div class="phone-footer">
           <button class="btn-styles" id="check-btn">Check</button>
           <button class="btn-styles" id="clear-btn">Clear</button>
