--- a/palindrome/index.html
+++ b/palindrome/index.html
@@ -9,7 +9,7 @@
       <p>Enter in text to check for a palindrome:</p>
       <input id="text-input" />
       <button id="check-btn" type="button">Check</button>
-      <div id="result"></div>
+      <div id="result" class="result hidden"></div>
     </div>
     <script src="script.js"></script>
   </body>
