--- a/us-phone-validator/index.html
+++ b/us-phone-validator/index.html
@@ -5,11 +5,11 @@
   </head>
   <body>
     <main>
-      <div class="phone-container">
+      <div id="middle-this-thing">
         <h1>Telephone Number Validator</h1>
         <label for="user-input">Enter a Phone Number:</label>
         <input maxlength="20" type="text" id="user-input" value="" />
-        <p id="results-div"></p>
+        <div id="results-div" class="results-div hidden"></div>
         <div class="phone-footer">
           <button class="btn-styles" id="check-btn">Check</button>
           <button class="btn-styles" id="clear-btn">Clear</button>
