--- a/us-phone-validator/index.html
+++ b/us-phone-validator/index.html
@@ -9,11 +9,11 @@
         <h1>Telephone Number Validator</h1>
         <label for="user-input">Enter a Phone Number:</label>
         <input maxlength="20" type="text" id="user-input" value="" />
-        <div id="results-div" class="results-div hidden"></div>
-        <div class="phone-footer">
-          <button class="btn-styles" id="check-btn">Check</button>
-          <button class="btn-styles" id="clear-btn">Clear</button>
+        <div id="middle-this-thing-footer">
+          <button id="check-btn">Check</button>
+          <button id="clear-btn">Clear</button>
         </div>
+        <div id="results-div" class="results-div hidden"></div>
       </div>
     </main>
     <script src="script.js"></script>
