--- a/us-phone-validator/index.html
+++ b/us-phone-validator/index.html
@@ -8,10 +8,10 @@
       <div id="middle-this-thing">
         <h1>Telephone Number Validator</h1>
         <label for="user-input">Enter a Phone Number:</label>
-        <input maxlength="20" type="text" id="user-input" value="" />
+        <input type="text" maxlength="20" id="user-input" value="" />
         <div id="middle-this-thing-footer">
-          <button id="check-btn">Check</button>
-          <button id="clear-btn">Clear</button>
+          <button type="button" id="check-btn">Check</button>
+          <button type="button" id="clear-btn">Clear</button>
         </div>
         <div id="results-div" class="results-div hidden"></div>
       </div>
