--- a/palindrome/index.html
+++ b/palindrome/index.html
@@ -6,9 +6,9 @@
   <body>
     <div id="middle-this-thing">
       <h1>Palindrome checker</h1>
-      <p>Enter in text to check for a palindrome:</p>
-      <input id="text-input" />
-      <button id="check-btn" type="button">Check</button>
+      <label for="text-input">Enter in text to check for a palindrome:</label>
+      <input type="text" maxlength="20" id="text-input" value="" />
+      <button type="button" id="check-btn">Check</button>
       <div id="result" class="result hidden"></div>
     </div>
     <script src="script.js"></script>
