--- a/cash-register/index.html
+++ b/cash-register/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="./styles.css" />
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <div id="middle-this-thing">
       <h1>Cash Register</h1>
       <label for="cash">Enter cash from customer:</label>
-      <input type="number" id="cash" class="user-input" value="" />
+      <input type="number" id="cash" value="" />
       <button type="button" id="purchase-btn">Purchase</button>
       <div id="change-due" class="change-due hidden"></div>
     </div>
-    <script src="./script.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
