--- a/pokemon-search/index.html
+++ b/pokemon-search/index.html
@@ -7,7 +7,7 @@
     <div id="middle-this-thing">
       <h1>Pokémon Search App</h1>
       <label for="search-input">Search for Pokémon Name or ID:</label>
-      <input type="text" name="pokemon" id="search-input" value="" />
+      <input type="text" name="pokemon" id="search-input" required="" />
       <button type="button" id="search-button">Search</button>
       <div class="output">
         <div class="top-container">
